# injection-guard

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  pyproject.toml
docs/: deployment-guide.md  domain-fine-tuning.md  eval-results.md  fine-tuning-strategy.md  litguard-spec.md  ner-signals.md  safeguard-policy.md
src/injection_guard/: __init__.py  cli.py  config.py  engine.py  guard.py  reporting.py  types.py
src/injection_guard/aggregator/: __init__.py  meta.py  voting.py  weighted.py
src/injection_guard/classifiers/: __init__.py  anthropic.py  base.py  gemini.py  hf_compat.py  local_llm.py  onnx.py  openai.py  prompts.py  regex.py  safeguard.py
src/injection_guard/eval/: __init__.py  batch.py  calibration.py  dataset.py  report.py  runner.py
src/injection_guard/gate/: __init__.py  model_armor.py
src/injection_guard/preprocessor/: __init__.py  encoding.py  gliner.py  pipeline.py  regex.py  structural.py  token.py  unicode.py
src/injection_guard/router/: __init__.py  cascade.py  parallel.py
tests/: conftest.py  test_benchmark_qualifire.py  test_config.py  test_guard.py  test_integration.py
tests/integration/: conftest.py  test_benchmark_qualifire.py  test_eval_classifiers.py  test_eval_model_armor.py  test_full_ensemble.py  test_live_classifiers.py  test_model_benchmarks.py
tests/test_classifiers/: test_anthropic.py  test_gemini.py  test_local_llm.py  test_onnx.py  test_openai.py
tests/test_eval/: test_batch.py
tests/test_gate/: test_model_armor.py
tests/test_preprocessor/: test_pipeline.py
tests/test_router/: test_parallel.py
tests/unit/: conftest.py  test_config.py  test_engine.py  test_guard.py  test_pipeline.py  test_reporting.py
tests/unit/test_aggregator/: test_meta.py  test_voting.py  test_weighted.py
tests/unit/test_classifiers/: test_anthropic.py  test_gemini.py  test_local_llm.py  test_openai.py  test_regex.py  test_safeguard.py
tests/unit/test_eval/: test_batch.py  test_report.py  test_runner.py
tests/unit/test_gate/: test_model_armor.py
(+8 files in other folders)
