[project]
name = "injection-guard"
version = "0.1.0"
description = "Ensemble prompt injection detection with pluggable classifiers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Prashant Kulkarni" }]
keywords = ["ai-safety", "prompt-injection", "llm-security", "agentic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
]

[project.optional-dependencies]
api = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "google-cloud-aiplatform>=1.60.0",
]
local = [
    "onnxruntime>=1.18.0",
    "tokenizers>=0.20.0",
]
gliner = [
    "gliner>=0.2.10",
    "torch>=2.1.0",
]
gcp = [
    "google-cloud-modelarmor>=0.1.0",
]
eval = [
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
]
benchmark = [
    "datasets>=2.14.0",
]
dev = [
    "injection-guard[api,local,gliner,gcp,eval]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
all = ["injection-guard[api,local,gliner,gcp,eval]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/injection_guard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "benchmark: tests that download HuggingFace datasets (deselect with -m 'not benchmark')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
